update: ダッシュボードアイコンの変更

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <header>3-C</header>
             <ul>
                 <li>
-                    <a href="#"><i class="fa-solid fa-calendar-days"></i>ダッシュボード</a>
+                    <a href="#"><i class="fa-solid fa-gauge"></i>ダッシュボード</a>
                 </li>
                 <li>
                     <a href="jikanwari.html"><i class="fa-solid fa-calendar-days"></i>時間割</a>
