--- a/jikanwari.html
+++ b/jikanwari.html
@@ -26,7 +26,7 @@
             <header>3-c</header>
             <ul>
                 <li>
-                    <a href="index.html"><i class="fa-solid fa-calendar-days"></i>ダッシュボード</a>
+                    <a href="index.html"><i class="fa-solid fa-gauge"></i>ダッシュボード</a>
                 </li>
                 <li>
                     <a href="#"><i class="fa-solid fa-calendar-days"></i>時間割</a>
