update: 今日提出の宿題が見れるように

--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
                 <ul id="tomorrow-schedule" class="list"></ul>
             </div>
             <div class="section">
+                <h2>今日提出の宿題</h2>
+                <ul id="homework-due-today" class="list"></ul>
+            </div>
+            <div class="section">
                 <h2>明日締切の宿題</h2>
                 <ul id="homework-due-tomorrow" class="list"></ul>
             </div>
