update: 画像データ追加

--- a/jikanwari.html
+++ b/jikanwari.html
@@ -38,7 +38,13 @@
         </div>
         <div class="container">
             <h1>時間割</h1>
-            <ul id="schedule" class="schedule"></ul>
+            <button id="toggleButton">画像表示に切り替え</button>
+            <div id="scheduleContainer">
+                <ul id="schedule" class="schedule"></ul>
+            </div>
+            <div id="imageContainer" style="display: none;">
+                <img id="scheduleImage" src="https://drive.google.com/uc?id=1-AbgYUOYiTPvmUmtwhpfrSl2HpeYMRoM" alt="時間割画像">
+            </div>
         </div>
         <div class="bg"></div>
     </body>
