--- a/jikanwari.html
+++ b/jikanwari.html
@@ -42,7 +42,9 @@
         <div id="scheduleContainer">
             <ul id="schedule" class="schedule"></ul>
         </div>
-        <div id="imageContainer" style="display: none;"></div>
+        <div id="imageContainer" style="display: none;">
+            <ul id="imageList" class="schedule"></ul>
+        </div>
     </div>
     <div class="bg"></div>
 </body>
