--- a/jikanwari.html
+++ b/jikanwari.html
@@ -42,9 +42,7 @@
         <div id="scheduleContainer">
             <ul id="schedule" class="schedule"></ul>
         </div>
-        <div id="imageContainer" style="display: none;">
-            <ul id="imageList" class="schedule"></ul>
-        </div>
+        <div id="imageContainer" style="display: none;"></div>
     </div>
     <div class="bg"></div>
 </body>
